--- a/style/style.less
+++ b/style/style.less
@@ -1,11 +1,18 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
   margin: 0;
   background-color: orange;
   font-family: Arial, sans-serif;
+}
+
+.wrapper {
+  opacity: 0.0;
+  transition-property: opacity;
+  transition-duration: 1s;
+  transition-timing-function: linear; 
+}
+
+.app-loaded {
+  opacity: 1.0;
 }
 
 .empty {
@@ -82,14 +89,12 @@ body {
 }
 
 .product-info {
-  .buy {
-    button {
-      float: right;
+    .buy {
+        margin-bottom: 10px;
+        button {
+            float: right;
+        }
     }
-  }
-  .forms {
-    margin-top: 10px;
-  }
 }
 
 .clearfix:after {
