--- a/style/style.less
+++ b/style/style.less
@@ -8,105 +8,126 @@
     height: 0;
   }
 }
-  * html .clearfix             { zoom: 1; } /* IE6 */
-  *:first-child+html .clearfix { zoom: 1; } /* IE7 */
+* html .clearfix             { zoom: 1; } /* IE6 */
+*:first-child+html .clearfix { zoom: 1; } /* IE7 */
 
-  body {
-    margin: 0;
-    background-color: orange;
-    font-family: Arial, sans-serif;
-  }
+body {
+  margin: 0;
+  background-color: orange;
+  font-family: Arial, sans-serif;
+}
 
-  .wrapper {
-    opacity: 0.0;
-    transition-property: opacity;
-    transition-duration: 1s;
-    transition-timing-function: linear;
-  }
+.wrapper {
+  opacity: 0.0;
+  transition-property: opacity;
+  transition-duration: 1s;
+  transition-timing-function: linear;
+}
 
-  .app-loaded {
-    opacity: 1.0;
-  }
+.app-loaded {
+  opacity: 1.0;
+}
 
-  .empty {
-    text-align: center;
-    margin-top: 300px;
-  }
+.basket {
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin-top: 10px;
+  margin-right: 10px;
 
-  .controls {
-    margin: 10px auto;
-    padding: 10px;
-    background-color: #fff;
-    width: 350px;
-  }
-
-  .products {
-    margin: 0 auto;
-    width: 904px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-start;
-  }
-
-  .product-item {
-    border: 1px solid black;
-    background-color: #fff;
-    padding: 15px;
-    width: 432px;
-    margin: 10px;
-  }
-
-  .product-item-list {
-    width: 100%;
-    .clearfix;
-  }
-
-  .product-image {
-    width: 400px;
-    height: 300px;
-  }
-
-  .product-image-list {
-    float: left;
-    margin-right: 15px;
-  }
-
-  .product-info-list {
-    float: left;
-    width: 50%;
-    margin-left: 10px;
-    padding: 0 10px;
-  }
-
-  .product-name {
-    text-align: center;
-    text-transform: uppercase;
-    padding: 10px;
-  }
-
-  .some-info {
-    text-indent: 25px;
-    text-align: justify;
-    height: 130px;
-    margin-bottom: 15px;
-    overflow-y: hidden;
-  }
-
-  .some-info p {
-    margin: 0;
-  }
-
-  .product-price {
-    float: left;
-  }
-
-  .product-info {
-    .buy {
-      margin-bottom: 10px;
-      button {
-        float: right;
-      }
+  .btn-big {
+    width: 70px;
+    height: 70px;
+    font-size: 25px;
+    .badge-red {
+      background-color: red;
+      color: white;
+      position: absolute;
+      top: 10px;
+      right: 10px;
     }
   }
+}
+
+.empty {
+  text-align: center;
+  margin-top: 300px;
+}
+
+.controls {
+  margin: 10px auto;
+  padding: 10px;
+  background-color: #fff;
+  width: 350px;
+}
+
+.products {
+  margin: 0 auto;
+  width: 904px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.product-item {
+  border: 1px solid black;
+  background-color: #fff;
+  padding: 15px;
+  width: 432px;
+  margin: 10px;
+}
+
+.product-item-list {
+  width: 100%;
+  .clearfix;
+}
+
+.product-image {
+  width: 400px;
+  height: 300px;
+}
+
+.product-image-list {
+  float: left;
+  margin-right: 15px;
+}
+
+.product-info-list {
+  float: left;
+  width: 50%;
+  margin-left: 10px;
+  padding: 0 10px;
+}
+
+.product-name {
+  text-align: center;
+  text-transform: uppercase;
+  padding: 10px;
+}
+
+.some-info {
+  text-indent: 25px;
+  text-align: justify;
+  height: 130px;
+  margin-bottom: 15px;
+  overflow-y: hidden;
+}
+
+.some-info p {
+  margin: 0;
+}
+
+.product-price {
+  float: left;
+}
+
+.product-info {
+  .buy {
+    margin-bottom: 10px;
+    button {
+      float: right;
+    }
+  }
+}
