--- a/style/style.css
+++ b/style/style.css
@@ -21,7 +21,7 @@ body {
   opacity: 1.0;
 }
 .basket {
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 0;
   margin-top: 10px;
@@ -38,6 +38,36 @@ body {
   position: absolute;
   top: 10px;
   right: 10px;
+}
+.basket-item {
+  margin-bottom: 25px;
+}
+.basket-item a {
+  float: left;
+  text-decoration: none;
+}
+.basket-item a .remove-product {
+  border: 1px solid red;
+  border-radius: 50%;
+  width: 26px;
+  height: 26px;
+  margin-right: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.basket-item a .remove-product span {
+  color: red;
+  top: 0;
+}
+.basket-item a .remove-product span:hover {
+  color: black;
+}
+.basket-item img {
+  width: 200px;
+  height: 150px;
+  float: left;
+  margin-right: 20px;
 }
 .empty {
   text-align: center;
@@ -111,6 +141,6 @@ body {
 .product-info .buy {
   margin-bottom: 10px;
 }
-.product-info .buy button {
+.product-info .buy a {
   float: right;
 }
