--- a/style/style.less
+++ b/style/style.less
@@ -34,7 +34,6 @@ body {
   top: 0;
   margin-top: 10px;
   margin-right: 10px;
-
   .btn-big {
     width: 70px;
     height: 70px;
@@ -78,6 +77,17 @@ body {
     float: left;
     margin-right: 20px;
   }
+}
+
+.promo {
+  position: fixed;
+  right: 0;
+  top: 100px;
+  width: 300px;
+  background-color: white;
+  padding: 15px;
+  margin-right: 10px;
+  font-size: 18px;
 }
 
 .empty {
@@ -159,6 +169,9 @@ body {
     margin-bottom: 10px;
     button {
       float: right;
+    }
+    .popover-content button {
+      float: left;
     }
   }
 }
